Fix bug where sidebar and topbar where behind the main view
Update card component

Reorder scss properties

--- a/src/components/home/Card.scss
+++ b/src/components/home/Card.scss
@@ -7,10 +7,46 @@
   flex: 0 0 200px;
   height: 200px;
   margin: 5px;
+  position: relative;
 
   &__inner {
+    align-items: center;
+    display: flex;
     height: 100%;
+    justify-content: center;
     padding: 10px;
     width: 100%;
+  }
+
+  &__controls {
+    display: flex;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+  }
+
+  &__button {
+    align-items: center;
+    background-color: $color-4;
+    border: none;
+    border-radius: 3px;
+    color: $bright-text-color;
+    cursor: pointer;
+    display: flex;
+    height: 26px;
+    justify-content: center;
+    margin-left: 5px;
+    outline: none;
+    width: 26px;
+
+    &:hover {
+      background-color: $color-3;
+
+    }
+  }
+
+  &__md-cafe-icon, &__md-trash-icon {
+    height: 20px;
+    width: 20px;
   }
 }
